charon/tests/ui/quantified-clause.out
disabled backtrace
warning[E9999]: Could not find a clause for `Binder { value: <F as std::ops::FnOnce<(&'a (),)>>, bound_vars: [Region(BrNamed(test_crate::foo::'a, 'a))] }` in the item parameters
  |
  = note: ⚠️ This is a bug in Hax's frontend.
          Please report this error to https://github.com/hacspec/hax/issues with some context (e.g. the current crate)!

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_types.rs:78:26:
Error: missing binder when translating lifetime
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::foo`.
 --> tests/ui/quantified-clause.rs:3:1
  |
3 | / fn foo<F>(_f: F)
4 | | where
5 | |     F: for<'a> FnMut(&'a ()),
  | |_____________________________^

error: Ignoring the following item due to an error: test_crate::foo
 --> tests/ui/quantified-clause.rs:3:1
  |
3 | / fn foo<F>(_f: F)
4 | | where
5 | |     F: for<'a> FnMut(&'a ()),
  | |_____________________________^

error: aborting due to 2 previous errors; 1 warning emitted

Error: Charon driver exited with code 101
